// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`team resources addTeamMember should resolve with the team member creation success 1`] = `
{
  "created_datetime": "2021-10-28T13:59:55.322780+00:00",
  "id": 1,
  "name": "team",
  "timezone": "UTC",
  "updated_datetime": "2021-10-28T13:59:55.322780+00:00",
}
`;

exports[`team resources createTeam should resolve with a new Team on success 1`] = `
{
  "created_datetime": "2021-10-28T13:59:55.322780+00:00",
  "decoration": {},
  "description": null,
  "id": 33,
  "members": [
    {
      "email": "foo@gorgias.com",
      "id": 182267,
      "meta": {
        "name_set_via": "agent",
      },
      "name": "Foo",
    },
  ],
  "name": "Foo",
  "uri": "/api/teams/33/",
}
`;

exports[`team resources createTeam should resolve with a new Team on success 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "allowAbsoluteUrls": true,
      "data": "{"name":"Foo","members":[{"email":"foo@gorgias.com","id":182267,"meta":{"name_set_via":"agent"},"name":"Foo"}]}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/teams/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
  "unlink": [],
}
`;

exports[`team resources deleteTeam should resolve on success 1`] = `
{
  "config": {
    "allowAbsoluteUrls": true,
    "data": undefined,
    "env": {
      "Blob": [Function],
      "FormData": [Function],
    },
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "delete",
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "transitional": {
      "clarifyTimeoutError": false,
      "forcedJSONParsing": true,
      "legacyInterceptorReqResOrdering": true,
      "silentJSONParsing": true,
    },
    "url": "/api/teams/1/",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": undefined,
  "headers": {},
  "request": {
    "responseURL": "/api/teams/1/",
  },
  "status": 200,
}
`;

exports[`team resources fetchTeam should resolve with a Team on success 1`] = `
{
  "created_datetime": "2021-10-28T13:59:55.322780+00:00",
  "decoration": {},
  "description": null,
  "id": 33,
  "members": [
    {
      "email": "foo@gorgias.com",
      "id": 182267,
      "meta": {
        "name_set_via": "agent",
      },
      "name": "Foo",
    },
  ],
  "name": "Foo",
  "uri": "/api/teams/33/",
}
`;

exports[`team resources fetchTeamMembers should resolve with the team members on success 1`] = `
{
  "config": {
    "allowAbsoluteUrls": true,
    "data": undefined,
    "env": {
      "Blob": [Function],
      "FormData": [Function],
    },
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "get",
    "params": {
      "limit": 30,
    },
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "transitional": {
      "clarifyTimeoutError": false,
      "forcedJSONParsing": true,
      "legacyInterceptorReqResOrdering": true,
      "silentJSONParsing": true,
    },
    "url": "/api/teams/35/members",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": [
    {
      "email": "foo@gorgias.com",
      "id": 182267,
      "meta": {
        "name_set_via": "agent",
      },
      "name": "Foo",
    },
  ],
  "headers": {},
  "request": {
    "responseURL": "/api/teams/35/members",
  },
  "status": 200,
}
`;

exports[`team resources fetchTeams should concat second sorting attribute when sorting by usage 1`] = `
{
  "limit": 30,
  "order_by": "name:asc",
}
`;

exports[`team resources fetchTeams should concat second sorting attribute when sorting by usage 2`] = `
{
  "limit": 30,
  "order_by": "name:desc",
}
`;

exports[`team resources fetchTeams should resolve with a Team list on success 1`] = `
{
  "config": {
    "allowAbsoluteUrls": true,
    "data": undefined,
    "env": {
      "Blob": [Function],
      "FormData": [Function],
    },
    "headers": {
      "Accept": "application/json, text/plain, */*",
      "X-CSRF-Token": "abcd",
      "X-Gorgias-User-Client": "web",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "get",
    "params": {
      "limit": 30,
    },
    "timeout": 0,
    "transformRequest": [
      [Function],
    ],
    "transformResponse": [
      [Function],
    ],
    "transitional": {
      "clarifyTimeoutError": false,
      "forcedJSONParsing": true,
      "legacyInterceptorReqResOrdering": true,
      "silentJSONParsing": true,
    },
    "url": "/api/teams/",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": {
    "data": [
      {
        "created_datetime": "2021-10-28T13:59:55.322780+00:00",
        "decoration": {},
        "description": null,
        "id": 33,
        "members": [
          {
            "email": "foo@gorgias.com",
            "id": 182267,
            "meta": {
              "name_set_via": "agent",
            },
            "name": "Foo",
          },
        ],
        "name": "Foo",
        "uri": "/api/teams/33/",
      },
      {
        "created_datetime": "2021-11-22T11:41:08.133256+00:00",
        "decoration": {},
        "description": "Default team, which was created for phone tickets auto-assignment.",
        "id": 34,
        "members": [
          {
            "email": "bar@gorgias.io",
            "id": 2,
            "meta": {},
            "name": "John Doe",
          },
        ],
        "name": "Phone team - +1 205-396-3441",
        "uri": "/api/teams/34/",
      },
      {
        "created_datetime": "2021-11-23T10:12:02.463745+00:00",
        "decoration": {},
        "description": null,
        "id": 35,
        "members": [
          {
            "email": "doe@gorgias.io",
            "id": 3,
            "meta": null,
            "name": "John Bar",
          },
        ],
        "name": "Team: user meta null",
        "uri": "/api/teams/35/",
      },
      {
        "created_datetime": "2021-11-24T15:01:09.788109+00:00",
        "decoration": {},
        "description": null,
        "id": 36,
        "members": [],
        "name": "Test",
        "uri": "/api/teams/36/",
      },
    ],
    "meta": {
      "next_cursor": null,
      "prev_cursor": null,
    },
  },
  "headers": {},
  "request": {
    "responseURL": "/api/teams/",
  },
  "status": 200,
}
`;

exports[`team resources updateTeam should resolve with the updated team on success 1`] = `
{
  "created_datetime": "2021-10-28T13:59:55.322780+00:00",
  "decoration": {},
  "description": null,
  "id": 33,
  "members": [
    {
      "email": "foo@gorgias.com",
      "id": 182267,
      "meta": {
        "name_set_via": "agent",
      },
      "name": "Foo",
    },
  ],
  "name": "Foo",
  "uri": "/api/teams/33/",
}
`;

exports[`team resources updateTeam should resolve with the updated team on success 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [
    {
      "allowAbsoluteUrls": true,
      "data": "{"created_datetime":"2021-10-28T13:59:55.322780+00:00","decoration":{},"description":null,"id":33,"members":[{"email":"foo@gorgias.com","id":182267,"meta":{"name_set_via":"agent"},"name":"Foo"}],"name":"Foo","uri":"/api/teams/33/"}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/teams/33/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "unlink": [],
}
`;
